--- a/src/Functions/MailAnalyzeFunction/MailAnalyzeFunction/MailAnalyzeFunction.csproj
+++ b/src/Functions/MailAnalyzeFunction/MailAnalyzeFunction/MailAnalyzeFunction.csproj
@@ -8,9 +8,10 @@
     <UserSecretsId>7efcf189-4094-46d2-95ed-ff2bb46e9b53</UserSecretsId>
   </PropertyGroup>
   <ItemGroup>
-    <FrameworkReference Include="Microsoft.AspNetCore.App" />
+    <FrameworkReference Include="Microsoft.AspNetCore.App" />    
     <PackageReference Include="Azure.AI.OpenAI" Version="2.2.0-beta.4" />
     <PackageReference Include="Microsoft.ApplicationInsights" Version="2.23.0" />
+    <PackageReference Include="Microsoft.Azure.Cosmos" Version="3.43.0" />
     <PackageReference Include="Microsoft.Azure.Functions.Worker" Version="2.0.0" />
     <PackageReference Include="Microsoft.Azure.Functions.Worker.Extensions.CosmosDB" Version="4.12.0" />
     <PackageReference Include="Microsoft.Azure.Functions.Worker.Extensions.Http" Version="3.3.0" />
